Started to look at setting width of charts to fit container. This seems to break the ability to select series via the legent - look at inspect window in Chrome. References issue #477

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -371,3 +371,17 @@ ul.no-marker {
     /*overflow: scroll;*/
     /*overflow-x: hidden;*/
 }
+
+div.altair-chart-container {
+  width: 100%;
+  height: auto!important;
+  min-width: 200px;
+  min-height: 100px;
+}
+
+canvas.marks {
+  max-width: 100%!important;
+  height: auto!important;
+  min-width: 200px;
+  min-height: 100px;
+}
